--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "14.2.12",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-syntax-highlighter": "^15.5.0"
   },
